--- a/springboot-app/build.gradle
+++ b/springboot-app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 
 	// Swagger : /swagger-ui/index.html
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+
+    // dotenv
+    implementation 'io.github.cdimascio:dotenv-java:2.2.0'
 }
 
 tasks.named('test') {
